Start templates. Initial home views

--- a/gallery/templates/collection.html
+++ b/gallery/templates/collection.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block title %}
-Piece Name
+Collection Name
 {% endblock %}
 
 {% block content %}
 
-Piece
+Collection
 
 {% endblock %}
