Update models, templates to gallery

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@ Home
 
 {% block content %}
 
-<div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<div id="workCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
             <img src="..." class="d-block w-100" alt="...">
@@ -22,7 +22,7 @@ Home
 </div>
 <div>
     <h2>
-        <a href="" aria-label="">
+        <a href="{% url 'gallery:gallery' %}" aria-label="Links to gallery page">
             View Work
         </a>
     </h2>
