--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,9 +3,9 @@
     <div class="container-fluid">
         <a href="" target="_blank" rel="noopener" aria-label="Opens Instagram in new tab">
             <i class="fa-brands fa-instagram"></i>
-            Instgram
+            Instagram
         </a>
-        <a href="" aria-label="Redirects to contact page">
+        <a href="{% url 'home:contact' %}" aria-label="Redirects to contact page">
             <i class="fa-solid fa-at"></i>
             Contact
         </a>
