--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-About The Artist
+Contact
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@ About The Artist
     </div>
     <div class="mb-3">
         <label for="contact_message" class="form-label">Your Message:</label>
-        <textarea name="contact_message" class="form-control" id="contact_message" rows="3"></textarea>
+        <textarea name="contact_message" class="form-control" id="contact_message" rows="3" placeholder="Your Message"></textarea>
     </div>
     <button type="submit" class="button">Send Message</button>
 </form>
