--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,33 +1,31 @@
 {% load static %}
 
 <header>
-    <h1><a href="#" aria-label="home">bridge rose</a></h1>
-    <nav id="navbar" class="navbar navbar-expand-lg">
-        <div class="container-sm d-flex justify-content-between">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li>
-                        <a href="{% url 'home:index' %}" aria-label="Link to home page">Home</a>
-                    </li>
-                    <li>
-                        <a href="" aria-label="">Work</a>
-                    </li>
-                    <li>
-                        <a href="" aria-label="">Events</a>
-                    </li>
-                    <li>
-                        <a href="" aria-label="">About</a>
-                    </li>
-                    <li>
-                        <a href="" aria-label="">Contact</a>
-                    </li>                    
-                </ul>
-            </div>
+    <h1 class="text-center"><a href="{% url 'home:index' %}" aria-label="home">bridge rose</a></h1>
+    <nav id="navbar" class="navbar navbar-expand-sm my-2">
+        <button class="navbar-toggler mx-auto mb-2" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav w-100 d-flex justify-content-evenly align-items-center m-0">
+                <li class="nav-item mb-2">
+                    <a href="{% url 'home:index' %}" aria-label="Link to home page">Home</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a href="{% url 'gallery:gallery' %}" aria-label="Links to gallery page">Work</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a href="{% url 'home:events' %}" aria-label="Link to events page">Events</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a href="{% url 'home:about' %}" aria-label="Link to about the artist page">About</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a href="{% url 'home:contact' %}" aria-label="Link to contact page">Contact</a>
+                </li>
+            </ul>
         </div>
     </nav>
 </header>
