--- a/gallery/templates/gallery/enquiry.html
+++ b/gallery/templates/gallery/enquiry.html
@@ -1,17 +1,12 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block title %}
-Contact
-{% endblock %}
-
 {% block content %}
 
-<h1 class="gallery-title text-center">Contact The Artist</h1>
-
-<div class="col col-sm-8 col-md-6 col-lg-4 mx-auto">
-    <form id="contact-form" method="POST">
-        {% csrf_token %}
+<form id="contact-form" method="POST" class="modal-content">
+    {% csrf_token %}
+    <div class="modal-header">
+        <h5 class="gallery-title">Enquire</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
         <div class="mb-3">
             <label for="contact_name" class="form-label">Your Name:</label>
             <input type="text" name="contact_name" class="form-control" id="contact_name" placeholder="Your Name" required>
@@ -23,15 +18,17 @@ Contact
         </div>
         <div class="mb-3">
             <label for="contact_subject" class="form-label">Subject:</label>
-            <input type="text" name="contact_subject" class="form-control" id="contact_subject" placeholder="Subject"
-            required>
+            <input type="text" name="contact_subject" class="form-control" id="contact_subject" value="{{ piece }}"
+            readonly>
         </div>
         <div class="mb-3">
             <label for="contact_message" class="form-label">Your Message:</label>
             <textarea name="contact_message" class="form-control" id="contact_message" rows="3" placeholder="Your Message"></textarea>
         </div>
+    </div>
+    <div class="modal-footer">
         <button type="submit" class="art-btn float-end">Send Message</button>
-    </form>
-</div>
+    </div>
+</form>
 
 {% endblock %}
