--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -8,25 +8,26 @@ Work
 {% block content %}
 
 
-<div>
-   <h2 class="text-center">Work</h2>
-   <div>
-    <h3>Collections</h3>
-    <ul>
-        {% for collection in collections %}
-        <li>
-            <a href="{% url 'gallery:collection' slug=collection.slug %}" aria-label="Link to {{ collection }}">{{ collection }}</a>
-        </li>
-        {% empty %}
-        <li>
-            <a href="">Collection 1</a>
-        </li>
-        <li>
-            <a href="">Collection 2</a>
-        </li>
-        {% endfor %}
-    </ul>
+<div class="text-center">
+   <h2 class="gallery-title">Work</h2>
+   <div class="col">
+        <h3>Collections</h3>
+        <ul class="d-flex flex-row justify-content-evenly">
+            {% for collection in collections %}
+            <li>
+                <a href="{% url 'gallery:collection' slug=collection.slug %}" aria-label="Link to {{ collection }}">{{ collection }}</a>
+            </li>
+            {% empty %}
+            <li>
+                <a href="">Collection 1</a>
+            </li>
+            <li>
+                <a href="">Collection 2</a>
+            </li>
+            {% endfor %}
+        </ul>
    </div>
+   <hr>
 </div>
 <div>
     <div class="row d-flex justify-content-evenly">
@@ -34,11 +35,9 @@ Work
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 text-center">
             <div class="h-100 border-0 image-card">
                 <div class="my-3">
-                    {% if piece.thumbnail %}
                     <a href="{% url 'gallery:piece' slug=piece.slug %}">
-                        <img width="160" height="160" class="thumbs" src="{{ piece.thumbnail.url }}" alt="{{ piece }}">
+                        <img width="200" height="200" class="thumbs" src="{{ piece.thumbnail.url }}" alt="{{ piece }}">
                     </a>
-                    {% endif %}
                 </div>
                 <div>
                     <div class="row">
@@ -48,6 +47,11 @@ Work
                                 {{ piece }}
                                 </a>
                             </h4>
+                            <p class="text-center">
+                                <a href="{% url 'gallery:piece' slug=piece.slug %}">
+                                    View
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
