--- a/home/templates/home/events.html
+++ b/home/templates/home/events.html
@@ -6,5 +6,96 @@ Events
 {% endblock %}
 
 {% block content %}
+<h1 class="gallery-title text-center">Events</h1>
+
+<div class="col col-sm-8 col-md-6 col-lg-4 mx-auto">
+    {% regroup events by get_upcoming as upcoming %}
+        {% for upcoming_events in upcoming %}
+            {% if upcoming_events.grouper == True %}
+            <h2>Upcoming</h2>
+                {% for event in upcoming_events.list %}
+                <div class="image-card">
+                    <h3 class="image-title">{{ event }}</h3>
+                    <p>{{ event.description }}</p>
+                    <table class="table table-sm">
+                        <tbody>
+                            <tr>
+                                <th>Date: </th>
+                                <td>{{ event.date_start|date:"d M Y" }}</td>
+                            </tr>
+                            {% if event.date_end %}
+                            <tr>
+                                <th>Runs until: </th>
+                                <td>{{ event.date_end|date:"d M Y" }}</td>
+                            </tr>
+                            {% endif %}
+                            <tr>
+                                <th>Location: </th>
+                                <td>{{ event.location }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                {% endfor %}
+            {% else %}
+            {% regroup events by has_passed as passed %}
+                {% for passed_events in passed %}
+                    {% if passed_events.grouper == False %}
+                    <h2>Currently Running</h2>
+                    {% for event in passed_events.list %}
+                    <div class="image-card">
+                        <h3 class="image-title">{{ event }}</h3>
+                        <p>{{ event.description }}</p>
+                        <table class="table table-sm">
+                            <tbody>
+                                <tr>
+                                    <th>Date: </th>
+                                    <td>{{ event.date_start|date:"d M Y" }}</td>
+                                </tr>
+                                {% if event.date_end %}
+                                <tr>
+                                    <th>Through: </th>
+                                    <td>{{ event.date_end|date:"d M Y" }}</td>
+                                </tr>
+                                {% endif %}
+                                <tr>
+                                    <th>Location: </th>
+                                    <td>{{ event.location }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    {% endfor %}
+                    {% else %}
+                    <h2>Passed</h2>
+                        {% for event in events.list %}
+                        <div class="image-card">
+                            <h3 class="image-title">{{ event }}</h3>
+                            <p>{{ event.description }}</p>
+                            <table class="table table-sm">
+                                <tbody>
+                                    <tr>
+                                        <th>Date: </th>
+                                        <td>{{ event.date_start|date:"d M Y" }}</td>
+                                    </tr>
+                                    {% if event.date_end %}
+                                    <tr>
+                                        <th>Through: </th>
+                                        <td>{{ event.date_end|date:"d M Y" }}</td>
+                                    </tr>
+                                    {% endif %}
+                                    <tr>
+                                        <th>Location: </th>
+                                        <td>{{ event.location }}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    {% endfor %}
+                    {% endif %}
+                {% endfor %}
+        {% endif %}
+    {% endfor %}
+</div>
 
 {% endblock %}
