--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,26 @@
         {% include 'includes/header.html' %}
 
         <!-- Main content -->
-        <main class="container-fluid mb-5">
+        <main class="container-fluid my-5">
             {% block content %}
             {% endblock content %}
         </main>
 
+        <!-- Modal -->
+        <div class="modal fade" id="artModal" tabindex="-1" aria-labelledby="artModalLabel" aria-hidden="true">
+            <div id="modal-dialog" class="modal-dialog" data-hx-target="this">
+
+            </div>
+        </div>
+
+
         <!-- Footer and scripts  -->
         {% include 'includes/footer.html' %}
+
+        <script src="https://unpkg.com/htmx.org@1.8.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        {% block additional_script %}
+
+        {% endblock additional_script %}
     </body>
 </html>
