--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,12 +1,11 @@
-<!-- Footer with short description of app, contact details and social links -->
 <footer class="footer mt-auto">
-    <div class="container-fluid">
+    <div class="container-fluid footer-socials d-flex justify-content-evenly">
         <a href="" target="_blank" rel="noopener" aria-label="Opens Instagram in new tab">
             <i class="fa-brands fa-instagram"></i>
             Instagram
         </a>
         <a href="{% url 'home:contact' %}" aria-label="Redirects to contact page">
-            <i class="fa-solid fa-at"></i>
+            <i class="fa fa-at"></i>
             Contact
         </a>
     </div>
