--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer mt-auto">
-    <div class="container-fluid footer-socials d-flex justify-content-evenly">
-        <a href="" target="_blank" rel="noopener" aria-label="Opens Instagram in new tab">
+    <div class="container-fluid footer-socials d-flex justify-content-evenly align-items-center">
+        <a href="https://www.instagram.com/bridgexrose" target="_blank" rel="noopener" aria-label="Opens Instagram in new tab">
             <i class="fa-brands fa-instagram"></i>
             Instagram
         </a>
