--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <header>
-    <h1 class="text-center"><a href="{% url 'home:index' %}" aria-label="home">bridge rose</a></h1>
+    <h1 class="text-center"><a class="header-title" href="{% url 'home:index' %}" aria-label="home">bridge rose</a></h1>
     <nav id="navbar" class="navbar navbar-expand-sm my-2">
         <button class="navbar-toggler mx-auto mb-2" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
