--- a/gallery/templates/gallery/collection.html
+++ b/gallery/templates/gallery/collection.html
@@ -37,7 +37,7 @@
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 text-center">
             <div class="h-100 border-0 image-card">
                 <div class="my-3">
-                    <a href="{% url 'gallery:piece' slug=piece.slug %}">
+                    <a class="thumbs" href="{% url 'gallery:piece' slug=piece.slug %}">
                         <figure>
                             <img width="200" height="200" class="thumbs" src="{{ piece.get_thumbnail }}" alt="{{ piece }}">
                         </figure>
