--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -35,7 +35,7 @@ Work
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 text-center">
             <div class="h-100 border-0 image-card">
                 <div class="my-3">
-                    <a href="{% url 'gallery:piece' slug=piece.slug %}">
+                    <a class="thumbs" href="{% url 'gallery:piece' slug=piece.slug %}">
                         <img width="200" height="200" class="thumbs" src="{{ piece.thumbnail.url }}" alt="{{ piece }}">
                     </a>
                 </div>
