--- a/gallery/templates/gallery/collection.html
+++ b/gallery/templates/gallery/collection.html
@@ -9,9 +9,13 @@
 
 
 <div>
-   <h2 class="gallery-title text-center">{{ collection }}</h2>
-   <div class="col-md-6 mx-auto">
-        <p class="text-center">
+   <h2 class="gallery-title text-center mb-2">{{ collection }}</h2>
+   <div class="col-md-8 col-lg-6 mx-auto">
+        <h5 class="text-center">
+            {% if collection.year %} {{ collection.year }} {% endif %}
+            {% if collection.start_date %} {{ collection.date_start|date:"Y" }} - {{ collection.date_end|date:"Y" }} {% endif %}
+        </h5>
+        <p class="text-center mb-5">
             {{ collection.description }}
         </p>
         <p class="text-center">
