--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -36,7 +36,7 @@ Work
             <div class="h-100 border-0 image-card">
                 <div class="my-3">
                     <a class="thumbs" href="{% url 'gallery:piece' slug=piece.slug %}">
-                        <img width="200" height="200" class="thumbs" src="{{ piece.thumbnail.url }}" alt="{{ piece }}">
+                        <img width="200" height="200" class="thumbs" src="{{ piece.get_thumbnail }}" alt="{{ piece }}">
                     </a>
                 </div>
                 <div>
