--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,26 +6,35 @@ Home
 {% endblock %}
 
 {% block content %}
-
-<div id="workCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="{% static 'images/bridge1.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/bridge2.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/industry.webp' %}" class="d-block w-100" alt="...">
+<div class="keep-space">
+    <div id="workCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{% static 'images/bridge1.webp' %}" class="d-block w-100" alt="Work from Secular Geometry">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/bridge2.webp' %}" class="d-block w-100" alt="Work from Secular Geometry">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/industry.webp' %}" class="d-block w-100" alt="Work from Secular Geometry">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/installation1.webp' %}" class="d-block w-100" alt="Work from Belfast Installation">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/installation2.webp' %}" class="d-block w-100" alt="Work from Belfast Installation">
+            </div>
         </div>
     </div>
 </div>
-<div>
+<hr>
+<div class="mt-5">
     <h2 class="text-center">
         <a href="{% url 'gallery:gallery' %}" aria-label="Links to gallery page">
             View Work
         </a>
     </h2>
 </div>
+
 
 {% endblock %}
